tests/baselines/reference/genericCallWithoutArgs.errors.txt
==== tests/cases/compiler/genericCallWithoutArgs.ts (2 errors) ====
    function f<X, Y>(x: X, y: Y) {
    }
    
    f<number,string>.
                    ~
!!! error TS2069: A parameter list must follow a generic type argument list. '(' expected.
                     
!!! error TS1003: Identifier expected.